  written in Perl/Tk is included in the contrib directory (oinkgui.pl). 
  See README.gui for more information. Screenshots are available on
  Oinkmaster's homepage.
o The new oinkmaster.conf has been updated with more and better
  examples (mostly "modifysid" stuff).
o Slightly improved multi-line rule parsing.
o A bunch of other minor improvements.
o Major documentation updates.



Oinkmaster v0.9 - 20031201
~~~~~~~~~~~~~~~~~~~~~~~~~~
o It's much faster now.
o Added ability to use "include <file>" in oinkmaster configuration
  files. <file> will be parsed (just like a regular oinkmaster.conf) as
  soon as the include statement is seen, and then return and continue
  parsing the rest of the original file. If an option is re-defined, it
  will override the previous value. You can use as many 'include'
  statements as you wish, and also include even more files from included
  files.
o Also permit an arbitrary number of "-C" arguments to be specified on
  command line to load multiple config files. They will be loaded in the
  order of appearance.
o Permit https://... in url specification. Only useful if your wget is
  SSL-enabled and you download from an SSL-enabled site.
o Permit scp://<user>@<remotehost>:<file.tar.gz> in url specification.
  The rules archive will be copied from remotehost using scp (only tested
  with OpenSSH). You can specify a private key with scp_key = ... in
  oinkmaster.conf (or set it in ~/.ssh/config).
o You can now specify "-i" for interactive mode. You will be asked to
  approve the changes before Oinkmaster modifies anything.
o Added 'enablesid' option to oinkmaster.conf.
o Slightly improved rules parsing (order of sid and msg does not matter).
o oinkmaster.conf will be searched for in /etc/ and /usr/local/etc/ by default.
o Make contrib/create-sidmap.pl and contrib/addsid.pl take an arbitrary number
  of directories as argument.
o Added a FAQ.
o wget is now always run in verbose mode, although the output is not displayed