@@ -25,6 +25,12 @@ o The new oinkmaster.conf has been updated with more and better
   examples (mostly "modifysid" stuff).
 o Slightly improved multi-line rule parsing.
 o A bunch of other minor improvements.
+o Permission of all rules files in the output directory that are subject
+  to become updated by Oinkmaster (i.e. files matching the 'update_rules'
+  regexp and that are not ignore by a 'skipfile') are now checked
+  before starting, so that we don't bail out in a middle of
+  execution if a copy of an updated file should fail because of
+  permission problem.
 o Major documentation updates.
 
 
